--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Hello, I'm [Your Name]</h1>
+        <h1>Hello, I'm Dhanush </h1>
         <p>A passionate developer creating awesome things.</p>
     </header>
     
@@ -33,7 +33,7 @@
 
     <footer>
         <p>Connect with me:</p>
-        <a href="#">GitHub</a> | <a href="#">LinkedIn</a>
+        <a href="https://github.com/DHANUSHKUMAR-19">GitHub</a> | <a href="">LinkedIn</a>
     </footer>
     
     <script src="script.js"></script>
