--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Database Verse</title>
     <link rel="stylesheet" href="style.css">
     <script defer src="script.js"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8469718621464285"
+     crossorigin="anonymous"></script>
     <!-- <style>
         header {
             background: linear-gradient(135deg, #1e3c72, #2a5298);
